--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -17,6 +17,168 @@
     <link rel="stylesheet" href="css/animate.min.css" type="text/css">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/creative.css" type="text/css">
+
+      <style>
+          #form-main {
+              width: 100%;
+              padding-left: 70px;
+              padding-top: 0px;
+          }
+
+          #form-div {
+              background-color: rgba(72,72,72,0.4);
+              padding-left: 35px;
+              padding-right: 35px;
+              padding-top: 35px;
+              padding-bottom: 50px;
+              width: 450px;
+              
+              
+              
+              -moz-border-radius: 7px;
+              -webkit-border-radius: 7px;
+          }
+
+          .feedback-input {
+              color: #3c3c3c;
+              font-family: Helvetica, Arial, sans-serif;
+              font-weight: 500;
+              font-size: 18px;
+              border-radius: 0;
+              line-height: 22px;
+              background-color: #fbfbfb;
+              padding: 13px 13px 13px 54px;
+              margin-bottom: 10px;
+              width: 100%;
+              -webkit-box-sizing: border-box;
+              -moz-box-sizing: border-box;
+              -ms-box-sizing: border-box;
+              box-sizing: border-box;
+              border: 3px solid rgba(0,0,0,0);
+          }
+
+              .feedback-input:focus {
+                  background: #fff;
+                  box-shadow: 0;
+                  border: 3px solid #3498db;
+                  color: #3498db;
+                  outline: none;
+                  padding: 13px 13px 13px 54px;
+              }
+
+          .focused {
+              color: #30aed6;
+              border: #30aed6 solid 3px;
+          }
+
+          /* Icons ---------------------------------- */
+          #name {
+              background-image: url(http://rexkirby.com/kirbyandson/images/name.svg);
+              background-size: 30px 30px;
+              background-position: 11px 8px;
+              background-repeat: no-repeat;
+          }
+
+              #name:focus {
+                  background-image: url(http://rexkirby.com/kirbyandson/images/name.svg);
+                  background-size: 30px 30px;
+                  background-position: 8px 5px;
+                  background-position: 11px 8px;
+                  background-repeat: no-repeat;
+              }
+
+          #email {
+              background-image: url(http://rexkirby.com/kirbyandson/images/email.svg);
+              background-size: 30px 30px;
+              background-position: 11px 8px;
+              background-repeat: no-repeat;
+          }
+
+              #email:focus {
+                  background-image: url(http://rexkirby.com/kirbyandson/images/email.svg);
+                  background-size: 30px 30px;
+                  background-position: 11px 8px;
+                  background-repeat: no-repeat;
+              }
+
+          #comment {
+              background-image: url(http://rexkirby.com/kirbyandson/images/comment.svg);
+              background-size: 30px 30px;
+              background-position: 11px 8px;
+              background-repeat: no-repeat;
+          }
+
+          textarea {
+              width: 100%;
+              height: 150px;
+              line-height: 150%;
+              resize: vertical;
+          }
+
+              input:hover, textarea:hover,
+              input:focus, textarea:focus {
+                  background-color: white;
+              }
+
+          #button-blue {
+              font-family: 'Montserrat', Arial, Helvetica, sans-serif;
+              float: left;
+              width: 100%;
+              border: #fbfbfb solid 4px;
+              cursor: pointer;
+              background-color: #3498db;
+              color: white;
+              font-size: 24px;
+              padding-top: 22px;
+              padding-bottom: 22px;
+              -webkit-transition: all 0.3s;
+              -moz-transition: all 0.3s;
+              transition: all 0.3s;
+              margin-top: -4px;
+              font-weight: 700;
+          }
+
+              #button-blue:hover {
+                  background-color: rgba(0,0,0,0);
+                  color: #0493bd;
+              }
+
+          .submit:hover {
+              color: #3498db;
+          }
+
+          .ease {
+              width: 0px;
+              height: 74px;
+              background-color: #fbfbfb;
+              -webkit-transition: .3s ease;
+              -moz-transition: .3s ease;
+              -o-transition: .3s ease;
+              -ms-transition: .3s ease;
+              transition: .3s ease;
+          }
+
+          .submit:hover .ease {
+              width: 100%;
+              background-color: white;
+          }
+
+          @@media only screen and (max-width: 580px) {
+              #form-div {
+                  left: 3%;
+                  margin-right: 3%;
+                  width: 88%;
+                  margin-left: 0;
+                  padding-left: 3%;
+                  padding-right: 3%;
+              }
+          }
+      </style>
+    <link rel="stylesheet" href="css/footer-distributed-with-address-and-phones.css">
+
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
+
+    <link href="http://fonts.googleapis.com/css?family=Cookie" rel="stylesheet" type="text/css">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -99,32 +261,70 @@
         </div>
         <div class="container">
             <div class="row">
-                <div class="col-lg-3 col-md-6 text-center">
-                    <div class="service-box">
-                        <i class="fa fa-4x fa-diamond wow bounceIn text-primary"></i>
-                        <h3>Registration</h3>
-                        <p class="text-muted">Registration only once in the program CashExpress (1,000) FCFA only XOF</p>
+                <div class="col-sm-6 col-md-3" style="border: solid; border-color: lightgray; background-color: #F8F8F8">
+                    
+                    <img src="../img/reg.png"
+                         alt="Generic placeholder thumbnail" width="58%" height="100%">
+
+                    <div class=" caption">
+                        <h3>REGISTRATION</h3>
+                        <p>Some sample text. Some sample text.</p>
+                        <p>
+                            <a href="#" class="btn btn-primary" role="button">
+                                Click here to Register
+                            </a>
+                            
+                        </p>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 text-center">
-                    <div class="service-box">
-                        <i class="fa fa-4x fa-paper-plane wow bounceIn text-primary" data-wow-delay=".1s"></i>
-                        <h3>Invitation</h3>
-                        <p class="text-muted">Invite three(3) people to enroll in the program Mobile CashExpress</p>
+                
+                <div class="col-sm-6 col-md-3" style="border: solid; border-color: lightgray; background-color: #F8F8F8">
+
+                    <img src="../img/invite.png"
+                         alt="Generic placeholder thumbnail" width="66%" height="100%">
+
+                    <div class=" caption">
+                        <h3>INVITATION</h3>
+                        <p>Some sample text. Some sample text.</p>
+                        <p>
+                            <a href="#" class="btn btn-primary" role="button">
+                                Click here to Invite
+                            </a>
+
+                        </p>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 text-center">
-                    <div class="service-box">
-                        <i class="fa fa-4x fa-newspaper-o wow bounceIn text-primary" data-wow-delay=".2s"></i>
-                        <h3>Followed</h3>
-                        <p class="text-muted">Log into your personal backoffice to track your earnings in real time</p>
+                
+                <div class="col-sm-6 col-md-3" style="border: solid; border-color: lightgray; background-color: #F8F8F8">
+
+                    <img src="../img/folow.png"
+                         alt="Generic placeholder thumbnail" width="58%" height="100%">
+
+                    <div class=" caption">
+                        <h3>FOLLOWERS</h3>
+                        <p>Some sample text. Some sample text.</p>
+                        <p>
+                            <a href="#" class="btn btn-primary" role="button">
+                                Click to see Followers
+                            </a>
+
+                        </p>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 text-center">
-                    <div class="service-box">
-                        <i class="fa fa-4x fa-heart wow bounceIn text-primary" data-wow-delay=".3s"></i>
-                        <h3>Made with Love</h3>
-                        <p class="text-muted">Trust is everything, We love our clients!</p>
+                <div class="col-sm-6 col-md-3" style="border: solid; border-color: lightgray; background-color: #F8F8F8">
+
+                    <img src="../img/love.png"
+                         alt="Generic placeholder thumbnail" width="58%" height="100%">
+
+                    <div class="caption">
+                        <h3>WITH LOVE</h3>
+                        <p>Some sample text. Some sample text.</p>
+                        <p>
+                            <a href="#" class="btn btn-primary" role="button">
+                                Made with Love
+                            </a>
+
+                        </p>
                     </div>
                 </div>
             </div>
@@ -251,8 +451,106 @@
                     <p><a href="mailto:your-email@your-domain.com">bbosslady@gmail.com</a></p>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-lg-3"></div>
+                <div class="col-lg-8">
+
+                    <div id="form-main">
+                        <div id="form-div">
+                            <form class="form" id="form1">
+
+                                <p class="name">
+                                    <input name="name" type="text" class="validate[required,custom[onlyLetter],length[0,100]] feedback-input" placeholder="Name" id="name" />
+                                </p>
+
+                                <p class="email">
+                                    <input name="email" type="text" class="validate[required,custom[email]] feedback-input" id="email" placeholder="Email" />
+                                </p>
+
+                                <p class="text">
+                                    <textarea name="text" class="validate[required,length[6,300]] feedback-input" id="comment" placeholder="Comment"></textarea>
+                                </p>
+
+
+                                <div class="submit">
+                                    <input type="submit" value="SEND" id="button-blue" />
+                                    <div class="ease"></div>
+                                </div>
+                            </form>
+                        </div>
+
+
+                    </div>
+                    </div>
+                <div class="col-lg-2"></div>
+            </div>
         </div>
     </section>
+
+    <footer class="footer-distributed">
+
+        <div class="footer-left">
+
+            <h3>Company<span>logo</span></h3>
+
+            <p class="footer-links">
+                <a href="../../Login/signin">Login</a>
+                ·
+                <a href="#services">Principles</a>
+                ·
+                <a href="#about">Offer Cash</a>
+                ·
+                <a href="#portfolio">Payments</a>
+                ·
+                <a href="#contact">Contact</a>
+                
+            </p>
+
+            <p class="footer-company-name">Company Name &copy; 2015</p>
+        </div>
+
+        <div class="footer-center">
+
+            <div>
+                <i class="fa fa-map-marker"></i>
+                <p><span>21 Revolution Street</span> NYC, United States </p>
+            </div>
+
+            <div>
+                <i class="fa fa-phone"></i>
+                <p>+1 555 123456</p>
+            </div>
+
+            <div>
+                <i class="fa fa-envelope"></i>
+                <p><a href="mailto:bbosslady@company.com">bbosslady@company.com</a></p>
+            </div>
+
+        </div>
+
+        <div class="footer-right">
+
+            <p class="footer-company-about">
+                <span>About the company</span>
+                This is teh company od BBossLady. She is professional Organizer. You can Trust her. Fusce euismod convallis velit, eu auctor lacus vehicula sit amet.
+            </p>
+
+            <div class="footer-icons">
+
+                <a href="#"><i class="fa fa-facebook"></i></a>
+                <a href="#"><i class="fa fa-twitter"></i></a>
+                <a href="#"><i class="fa fa-linkedin"></i></a>
+                <a href="#"><i class="fa fa-github"></i></a>
+
+            </div>
+                
+        </div>
+        <ul class="nav pull-right scroll-top">
+            <li><a href="#" title="Scroll to top"><i class="glyphicon glyphicon-chevron-up"></i></a></li>
+        </ul>
+    </footer>
+
+
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
     <!-- Bootstrap Core JavaScript -->
@@ -263,5 +561,10 @@
     <script src="js/wow.min.js"></script>
     <!-- Custom Theme JavaScript -->
     <script src="js/creative.js"></script>
+    <script>
+$('.scroll-top').click(function () {
+    $('body,html').animate({ scrollTop: 0 }, 1000);
+})</script>
+
 </body>
 </html>
