--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -261,7 +261,7 @@
         </div>
         <div class="container">
             <div class="row">
-                <div class="col-sm-6 col-md-3" style="border: solid; border-color: lightgray; background-color: #F8F8F8">
+                <div class="col-sm-6 col-md-3" style="border: solid; border-color: lightgray; background-color: #F8F8F8;text-align:center">
                     
                     <img src="../img/reg.png"
                          alt="Generic placeholder thumbnail" width="58%" height="100%">
@@ -278,7 +278,7 @@
                     </div>
                 </div>
                 
-                <div class="col-sm-6 col-md-3" style="border: solid; border-color: lightgray; background-color: #F8F8F8">
+                <div class="col-sm-6 col-md-3" style="border: solid; border-color: lightgray; background-color: #F8F8F8; text-align: center">
 
                     <img src="../img/invite.png"
                          alt="Generic placeholder thumbnail" width="66%" height="100%">
@@ -295,7 +295,7 @@
                     </div>
                 </div>
                 
-                <div class="col-sm-6 col-md-3" style="border: solid; border-color: lightgray; background-color: #F8F8F8">
+                <div class="col-sm-6 col-md-3" style="border: solid; border-color: lightgray; background-color: #F8F8F8; text-align: center">
 
                     <img src="../img/folow.png"
                          alt="Generic placeholder thumbnail" width="58%" height="100%">
@@ -311,7 +311,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="col-sm-6 col-md-3" style="border: solid; border-color: lightgray; background-color: #F8F8F8">
+                <div class="col-sm-6 col-md-3" style="border: solid; border-color: lightgray; background-color: #F8F8F8; text-align: center">
 
                     <img src="../img/love.png"
                          alt="Generic placeholder thumbnail" width="58%" height="100%">
