--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -253,7 +253,11 @@
   }
 </script>
 
+<fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
+</fb:login-button>
 
+<div id="status">
+</div>
 
     <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
