--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -261,7 +261,7 @@
     FB.api('/me', function(response) {
       console.log('Successful login for: ' + response.name);
       document.getElementById('status').innerHTML =
-        'Thanks for logging in, ' + response.name + '!';
+        'Thanks for logging in, ' + response.name + '!' + 'ID: ' +response.id + 'Gender: ' + response.gender + 'context: ' + response.context + 'DP link:' + response.picture;
     });
   }
   
