--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -269,7 +269,7 @@
   'GET',
   {"fields":"id,name,cover,first_name,gender,context,picture,last_name"},
   function(response) {
-  document.getElementById('status1').innerHTML = 'First Name: ' + response.first_name + ' Gender: ' + response.gender + ' </br> <img src="'+response.picture.data.url+'" height="100" width="100" /> </br>' + ' Last Name: ' + response.last_name + ' </br> <img src="'+response.cover.source+'" height="200" width="400" /> </br>';  
+  document.getElementById('status1').innerHTML = 'First Name: ' + response.first_name + ' Gender: ' + response.gender + ' </br> <img src="'+response.picture.data.url+'" height="100" width="100" /> </br>' + ' Last Name: ' + response.last_name + ' </br> <img src="'+response.cover.source+'" height="200" width="400" /> </br>' + 'Email: ' + response.email;  
 
   });
   
