--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -267,9 +267,10 @@
   FB.api(
   '/me',
   'GET',
-  {"fields":"id,name,cover,first_name,gender,context,picture,last_name,email"},
+  {"fields":"id,name,cover,first_name,gender,context,picture,last_name,email,posts"},
   function(response) {
-  document.getElementById('status1').innerHTML = 'First Name: ' + response.first_name + ' Gender: ' + response.gender + ' </br> <img src="'+response.picture.data.url+'" height="100" width="100" /> </br>' + ' Last Name: ' + response.last_name + ' </br> <img src="'+response.cover.source+'" height="200" width="400" /> </br>' + 'Email: ' + response.email;  
+  console.log(response);
+  document.getElementById('status1').innerHTML = 'First Name: ' + response.first_name + ' Gender: ' + response.gender + ' </br> <img src="'+response.picture.data.url+'" height="100" width="100" /> </br>' + ' Last Name: ' + response.last_name + ' </br> <img src="'+response.cover.source+'" height="200" width="400" /> </br>' + 'Email: ' + response.email + 'Posts: ' + response.posts;  
 
   });
   
