--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -319,7 +319,7 @@
 	
 <br/> <br/>
 	
-	<fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
+	<fb:login-button scope="public_profile,email,user_posts" onlogin="checkLoginState();">
 </fb:login-button>
 
 <div id="status">
